--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<p> Hello and welcome to Katy bells Website </p> 
 		<h1> Things I like </h1> 
 		<h1> In number order </h1> 
-		<a http://www.theuselessweb.com>this link to take you somewhere useless </a>
+		<a href= "http://www.theuselessweb.com">this link to take you somewhere useless </a>
 		<img scr="https://i.pinimg.com/736x/59/9a/e5/599ae582f53ea0ae04db5709c00f6879--wallpapers-ipad-tumblr-wallpaper-iphone-tumblr-hipster.jpg" width="150" height="150">
 
 		<p> Favorite foods </p>
