--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<a href="http://www.theuselessweb.com">this link to take you somewhere useless </a>
 		<img scr="https://i.pinimg.com/736x/59/9a/e5/599ae582f53ea0ae04db5709c00f6879--wallpapers-ipad-tumblr-wallpaper-iphone-tumblr-hipster.jpg" width="150" height="150">
 		<a href="https://jdawg19.github.io/"> Go check out Jadeas website! </a>
+		<a href="https://tobiaschristie.github.io/"> Go check out Tobais's website! </a>
 		<p> Favorite foods </p>
 		<ul> 
 			<li> ice cream </li>
