--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		
 		<a href="https://jdawg19.github.io/"> Go check out Jadeas website! </a>
 		
-		a href="https://tobiaschristie.github.io/"> Go check out Tobais's website! </a>
+		<a href="https://tobiaschristie.github.io/"> Go check out Tobais's website! </a>
 		<p> Favorite foods </p>
 		<ul> 
 			<li> ice cream </li>
