--- a/index.html
+++ b/index.html
@@ -83,17 +83,30 @@ bought a calf, so that the beef in Ze Stew would be tender and young. </p>
 cave. He opened the door and saw her sitting on a rocking chair with a brown-haired baby. She looked up and gasped, as if she had
 forgotten their deal, which he later found out that she had, which made him think that was unfit as a mother anyway. </p> 
 
-When he trying to take the baby, she cried and cried, just like she had when she was locked it the room full of straw. It was so annoying that he finally relented and said that if she guessed his name within three days then she could keep the baby. Immediately she guessed John, but he said no and explained that he was just in a John-ish sort of mood that day. She guessed again and again but she didn’t get it, although he thought as much.
+<p> When he trying to take the baby, she cried and cried, just like she had when she was locked it the room full of straw. It was so
+annoying that he finally relented and said that if she guessed his name within three days then she could keep the baby. Immediately she
+guessed John, but he said no and explained that he was just in a John-ish sort of mood that day. She guessed again and again but she
+didn’t get it, although he thought as much. </p> 
 
-The next day he went back to the castle and she guessed random names over and over, but none of them were his. When he left he was so incredibly bored and fed up with her, so he stopped at a local bar to get a drink. He ended up totally drunk and he went into the forest and started dancing a round in a circle singing about how happy he was that she would never guess that his name was Rumpelstiltskin.
+<p> The next day he went back to the castle and she guessed random names over and over, but none of them were his. When he left he was
+so incredibly bored and fed up with her, so he stopped at a local bar to get a drink. He ended up totally drunk and he went into the
+forest and started dancing a round in a circle singing about how happy he was that she would never guess that his name was
+Rumpelstiltskin.</p> 
 
-He woke up in the middle of the woods with no idea where he was, but he saw his footsteps from the day before and followed them. While walking, he saw another set of footprints a few meters away, but he didn’t think much of it. When he finally got home it was the middle of the day, and he was famished. He ate the rest of the golden soup before heading down to the castle.
+<p> He woke up in the middle of the woods with no idea where he was, but he saw his footsteps from the day before and followed them.
+While walking, he saw another set of footprints a few meters away, but he didn’t think much of it. When he finally got home it was the
+middle of the day, and he was famished. He ate the rest of the golden soup before heading down to the castle.</p> 
 
-As the queen guessed names over and over he started to tune out until she said “Could your name be Rumpelstiltskin?” He sat up in shock. How could she have guessed that, being the ignorant girl that she was? Then it dawned on him that the second set of footsteps in the forest could have been those of a guard of someone that had told her.
+<p> As the queen guessed names over and over he started to tune out until she said “Could your name be Rumpelstiltskin?” He sat up in
+shock. How could she have guessed that, being the ignorant girl that she was? Then it dawned on him that the second set of footsteps in
+the forest could have been those of a guard of someone that had told her.</p> 
 
-He was so mad and unwilling to accept that he would not be able to eat Ze Stew with the secret ingredient that he tore himself in half, spilling the golden stew all over the baby that the queen had in her arms. This was absorbed into the baby’s skin and would later turn it’s hair to a rich golden colour. It also cursed her so that one day she would be drawn to Ze Stew that he had intended to put her in.
+<p> He was so mad and unwilling to accept that he would not be able to eat Ze Stew with the secret ingredient that he tore himself in
+half, spilling the golden stew all over the baby that the queen had in her arms. This was absorbed into the baby’s skin and would later
+turn it’s hair to a rich golden colour. It also cursed her so that one day she would be drawn to Ze Stew that he had intended to put her
+in.</p> 
 
-The end </P> 
+<p> The end </P> 
 
 <img src="https://vignette.wikia.nocookie.net/shrek/images/e/e8/Rumpel3.JPG/revision/latest?cb=20100604055121">
 
@@ -103,4 +116,4 @@ The end </P>
 
 	</body> 
 
-<h1> I hope you enjoy the story ill post another one soon! </h1> 
+<h1> I hope you enjoy the story I'll post another one soon! </h1> 
