--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html> 
+
+	<head> 
+		<link rel="stylesheet" href="stylesheet.css"> 
+	</head>
 	<body> 	
 <h1> This is the story of rumplestiltskin </h1>
 
